--- a/main.html
+++ b/main.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <script type="text/javascript" src="./script.js">
+		<input type = "text" name = "inputbox" value= " ">
+		<input type = "text" year = "inputbox" value =" ">
 </script>
   </body>
 
